--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ jobs:
       name: "Create custom image 1 (conflict)"
       vm:
         create:
-          name: concurrent-job-test
+          name: concurrent-job-test1
       script:
         - echo "Running Job 1"
         - sleep $JOB_DELAY
@@ -18,7 +18,7 @@ jobs:
       name: "Create custom image 2 (conflict)"
       vm:
         create:
-          name: concurrent-job-test
+          name: concurrent-job-test1
       script:
         - echo "Running Job 2"
         - sleep $JOB_DELAY
