--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ jobs:
       name: "Create custom image 1 (conflict)"
       vm:
         create:
-          name: concurrent-job-test1
+          name: concurrent-job-test
       script:
         - echo "Running Job 1"
         - sleep $JOB_DELAY
