--- a/.travis.yml
+++ b/.travis.yml
@@ -2,40 +2,12 @@ os: linux
 language: generic
 dist: focal
 
-jobs:
-  include:
-    - stage: "Tests1"
-      name: "Create custom image 1"
-      vm:
-        create:
-          name: 0506-org-image52
-      script:
-        - echo "Running Job 1"
-    - stage: "Tests1"
-      name: "Create custom image 2"
-      vm:
-        create:
-          name: 0506-org-image53
-      script:
-        - echo "Running Job 2"
-    - stage: "Tests1"
-      name: "Create custom image 3"
-      vm:
-        create:
-          name: 0506-org-image54
-      script:
-        - echo "Running Job 3"
-    - stage: "Tests1"
-      name: "Create custom image 4"
-      vm:
-        create:
-          name: 0506-org-image55
-      script:
-        - echo "Running Job 4"
-    - stage: "Tests1"
-      name: "Create custom image 5"
-      vm:
-        create:
-          name: 0506-org-image56
-      script:
-        - echo "Running Job 5"
+vm:
+  create:
+    name: 0606-image
+
+script:
+  - echo "Creating custom file"
+  - sudo mkdir /my-custom-dir
+  - echo "Test custom image!" | sudo tee /my-custom-dir/my_custom_file.txt
+  - sudo cat /my-custom-dir/my_custom_file.txt
